# cli-tools

./: pathsum.py
src/: pathsum_deprecate.py
src/pathsum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pathsum_tool/: main.py
src/pathsum_tool/test_1/: __SUMMARY__PathSum ~ Summarize the files from pwd.txt  cpp_file.cc  inner_file1.txt
test/test_1/: pyproject.toml  random_csv.csv
test/test_1/ignored_dir/: this_should_be_ignored.txt
